@@ -1,5 +1,6 @@
 = 3.2.10 (not released yet)
 - fix nested scaffolds with update action disabled
+= initial work for tableless support (index with limited options)
 
 = 3.2.9
 - remove duplicated conditions with constraints
